<!--
  ~ Created by Tedo Manvelidze(ted3x) on 6/25/23, 11:40 PM
  ~ Copyright (c) 2023 . All rights reserved.
  ~ Last modified 6/25/23, 11:39 PM
  -->

<resources>
    <string name="app_name">Evenline</string>
    <string name="onboarding_title_1">Discover great events at your fingertips</string>
    <string name="onboarding_description_1">Find and attend events that fuel their passions. From music festivals, arts, conferences, and fundraisers, to gaming competitions.</string>
    <string name="onboarding_get_started">Get Started</string>
    <string name="auth_lets_get_started">Let’s Get Started</string>
    <string name="auth_description">Sign up or log in to see what happening near you.</string>
    <string name="auth_continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? [Sign up]</string>
    <string name="sign_up_create_an_account">Create an account</string>
    <string name="sign_up_your_name">Your name</string>
    <string name="sign_up_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="divider_or">Or</string>
    <string name="sign_up_terms">By sign up, I accept the Terms of Service and Community Guidelines and have read Privacy Policy.</string>
    <string name="sign_in_title">Hello Again!</string>
    <string name="sign_in_description">Welcome back, you’ve been missed</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_terms">By sign in, I accept the Terms of Service and Community Guidelines and have read Privacy Policy.</string>
    <string name="auth_continue_with_email">Continue with Email</string>
    <string name="sign_in_forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_description">Please enter the email address associated with your account.</string>
    <string name="forgot_password_send_me_email">Send me Email</string>
    <string name="reset_password_title">Reset your password</string>
    <string name="reset_password_description">Please enter a new password for your account.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password_create_new_password">Create New Password</string>
    <string name="otp_title">Verification Code</string>
    <string name="otp_description">We have to send the verification to your email [%s].</string>
    <string name="otp_verify">Verify</string>
    <string name="otp_resend_code">Resend code</string>
</resources>