<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Tedo Manvelidze(ted3x) on 6/25/23, 8:15 PM
  ~ Copyright (c) 2023 . All rights reserved.
  ~ Last modified 6/25/23, 8:14 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dimen_p_24"
    android:paddingTop="@dimen/dimen_p_24"
    android:paddingBottom="@dimen/dimen_p_16"
    tools:context=".presentation.changepassword.ResetPasswordFragment">

    <TextView
        android:id="@+id/resetPasswordTitle"
        style="@style/Label_Heading.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_p_40"
        android:text="@string/reset_password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resetPasswordDescription"
        style="@style/Label_Body_Medium_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_p_8"
        android:text="@string/reset_password_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordTitle" />

    <ge.ted3x.evenline.components.InputField
        android:id="@+id/resetPasswordField"
        style="@style/BaseInputField.Password"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_p_32"
        android:hint="@string/password"
        android:maxLength="32"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordDescription" />

    <ge.ted3x.evenline.components.InputField
        android:id="@+id/resetPasswordConfirmField"
        style="@style/BaseInputField.Password"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_p_16"
        android:hint="@string/confirm_password"
        android:maxLength="32"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPasswordBtn"
        style="@style/Button_Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_p_32"
        android:text="@string/reset_password_create_new_password"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>