<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Tedo Manvelidze(ted3x) on 6/25/23, 6:22 PM
  ~ Copyright (c) 2023 . All rights reserved.
  ~ Last modified 6/25/23, 6:22 PM
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/dimen_p_24"
    android:paddingVertical="@dimen/dimen_p_16"
    tools:context=".presentation.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signUpTitle"
            style="@style/Label_Heading.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_create_an_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ge.ted3x.evenline.components.InputField
            android:id="@+id/signUpYourName"
            style="@style/BaseInputField.Label"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_p_32"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/sign_up_your_name"
            app:layout_constraintTop_toBottomOf="@id/signUpTitle" />

        <ge.ted3x.evenline.components.InputField
            android:id="@+id/signUpEmail"
            style="@style/BaseInputField.Label"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_p_16"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/sign_up_email"
            app:layout_constraintTop_toBottomOf="@id/signUpYourName" />

        <ge.ted3x.evenline.components.InputField
            android:id="@+id/signUpPassword"
            style="@style/BaseInputField.Password"
            android:layout_width="match_parent"
            android:maxLength="32"
            android:layout_marginTop="@dimen/dimen_p_16"
            android:hint="@string/sign_up_password"
            app:layout_constraintTop_toBottomOf="@id/signUpEmail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/authWithEmailBtn"
            style="@style/Button_Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_p_32"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/signUpPassword" />

        <include
            android:id="@+id/divider"
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_p_24"
            app:layout_constraintTop_toBottomOf="@id/authWithEmailBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/authWithGoogleBtn"
            style="@style/Button_Social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_p_24"
            android:text="@string/auth_continue_with_google"
            app:icon="@drawable/ic_google"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            style="@style/Label_Body_Small_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up_terms"
            android:textColor="@color/color_grayscale_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>