<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Tedo Manvelidze(ted3x) on 6/25/23, 5:54 PM
  ~ Copyright (c) 2023 . All rights reserved.
  ~ Last modified 6/25/23, 5:48 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dimen_p_24"
    android:paddingVertical="@dimen/dimen_p_16"
    tools:context=".presentation.auth.AuthFragment">

    <TextView
        android:id="@+id/onboardingTitle"
        style="@style/Label_Heading.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_lets_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboardingDescription"
        style="@style/Label_Body_Medium_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_p_33"
        android:layout_marginTop="@dimen/dimen_p_8"
        android:text="@string/auth_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardingTitle" />

    <ImageView
        android:id="@+id/onboardingImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/img_auth"
        app:layout_constraintBottom_toTopOf="@id/authWithEmailBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authWithEmailBtn"
        style="@style/Button_Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_p_60"
        android:text="@string/auth_continue_with_email"
        app:layout_constraintBottom_toTopOf="@id/authWithGoogleBtn"
        app:layout_constraintTop_toBottomOf="@id/onboardingImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authWithGoogleBtn"
        style="@style/Button_Social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_p_12"
        android:text="@string/auth_continue_with_google"
        app:icon="@drawable/ic_google"
        app:layout_constraintTop_toBottomOf="@id/authWithEmailBtn" />

    <TextView
        android:id="@+id/authSignUp"
        style="@style/Label_Body_Medium_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_p_50"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/color_grayscale_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authWithGoogleBtn"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>