<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Tedo Manvelidze(ted3x) on 6/25/23, 8:15 PM
  ~ Copyright (c) 2023 . All rights reserved.
  ~ Last modified 6/25/23, 8:14 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dimen_p_24"
    android:paddingVertical="@dimen/dimen_p_16"
    tools:context=".presentation.forgotpassword.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/forgotPasswordImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordTitle"
        style="@style/Label_Heading.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_p_40"
        android:text="@string/forgot_password_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordImage" />

    <TextView
        android:id="@+id/forgotPasswordDescription"
        style="@style/Label_Body_Medium_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_p_20"
        android:layout_marginTop="@dimen/dimen_p_8"
        android:gravity="center"
        android:text="@string/forgot_password_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTitle" />

    <ge.ted3x.evenline.components.InputField
        android:id="@+id/forgotPasswordEmail"
        style="@style/BaseInputField.Label"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_p_32"
        android:drawableStart="@drawable/ic_mail"
        android:hint="@string/sign_up_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgotPasswordBtn"
        style="@style/Button_Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_p_32"
        android:text="@string/forgot_password_send_me_email"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>